# ScubaSteve

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
camera/: README.md  imageDetection.py
depthPressureSensor/: README.md
launch/: steve_launch.launch
rangeFinder/: README.md
src/scuba_steve/launch/: steve_launch.launch
src/scuba_steve/sim/: iterativeSim.py  matplotLibSim.py
src/scuba_steve/state_machine/nodes/: steve_sm_node.py
src/scuba_steve/state_machine/state_machines/: powerdown_sm.py  steve_sm.py
src/scuba_steve/state_machine/states/: idle_state.py  release_state.py  splashdown_state.py  start_state.py  surface_state.py
src/scuba_steve/state_machine/utils/: .mission_clock.py.swp  mission_clock.py
src/scuba_steve/transducers/imu/: imuTest.ino
src/scuba_steve/transducers/imu/pythonTestScripts/: pythonIMUtest.py
src/scuba_steve/transducers/range_finder/: rangeFinder.ino
src/scuba_steve/transducers/temperature_sensor/: temperatureSensor.ino
state_machine/nodes/: state_machine_node.py
state_machine/state_machines/: steve_state_machine.py
state_machine/states/: powerup_state.py  release_state.py  splashdown_state.py
steve_arduino/: CMakeLists.txt  package.xml
steve_auv/: CMakeLists.txt  package.xml  setup.py
steve_auv/action/: Comms.action  Gnc.action  Release.action  Vision.action
steve_auv/launch/: steve_demo_launch.launch  steve_launch.launch
steve_auv/msg/: GncThrusters.msg  GncThrustersMsg.msg
steve_auv/nodes/: arduino_bridge_node.py  comms_node.py  gnc_demo_node.py  mission_manager_demo_node.py  mission_manager_node.py  steve_sm_node.py  vision_node.py
steve_auv/src/steve_auv/comms/server/: comms_server.py  tcp_socket.py
steve_auv/src/steve_auv/comms/utils/: tcp_socket.py
steve_auv/src/steve_auv/gnc/server/: gnc_demo_server.py  gnc_server.py
steve_auv/src/steve_auv/mission_manager/state_machines/: comms_sm.py  explore_demo_sm.py  explore_sm.py  mission_manager_demo_sm.py  mission_manager_sm.py  powerdown_sm.py  steve_sm.py
steve_auv/src/steve_auv/mission_manager/states/: .idle_state.py.swp  comms_state.py  end_state.py  explore_state.py  idle_state.py  localize_state.py  powerdown_state.py  powerup_state.py  release_state.py  scheduled_action_state.py  splashdown_state.py  start_state.py  surface_state.py
steve_auv/src/steve_auv/mission_manager/utils/: action_cb.py  mission_clock.py  topics.py
steve_auv/src/steve_auv/sim/: submarine.py
steve_auv/src/steve_auv/state_machine/state_machines/: powerdown_sm.py  steve_sm.py
steve_auv/src/steve_auv/state_machine/states/: idle_state.py  release_state.py
steve_auv/src/steve_auv/transducers/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h
steve_auv/src/steve_auv/transducers/liquid_sensor/: liquid.ino  liquid_sensor.py
steve_auv/src/steve_auv/transducers/thruster_motor_driver/: README.md
steve_auv/src/steve_auv/vision/camera/: pi_camera_wrapper.py  takePicture.py
steve_auv/src/steve_auv/vision/server/: vision_server.py
steve_auv/src/steve_auv/vision/utils/: ellipse_detector.py  tmp.py
steve_auv/src/transducers/camera/: imageDetection.py
steve_auv/src/transducers/imu/: README.md
steve_auv/test/state_machine/: test_mission_clock.py
steve_auv/test/steve_auv/comms/: test_comms.py
steve_auv/test/steve_auv/gnc/: test_gnc_demo.py
steve_auv/test/steve_auv/mission_manager/: test_mission_clock.py  test_mission_manager_demo.py
steve_auv/test/steve_auv/vision/: test_vision.py
steve_ground_station/: CMakeLists.txt  package.xml  setup.py
steve_launch_structure/: CMakeLists.txt  package.xml  setup.py
temperatureSensor/: .README.md.swp  README.md
test/scuba_steve/state_machine/: test_mission_clock.py
thrusterMotorDriver/: BTS7960_motor_control_basic.ino
