<?xml version="1.0"?>
<package format="2">
  <name>scuba_steve</name>
  <version>0.0.0</version>
  <description>The scuba_steve package</description>
  <maintainer email="ntrivelis@gmail.com">Nick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_msgs</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_msgs</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
