<?xml version="1.0"?>
<package format="2">
  <name>steve_auv</name>
  <version>0.0.0</version>
  <description>The steve_auv package</description>
  <maintainer email="ntrivelis@gmail.com">Nick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</build_depend>
  <depend>actionlib_msgs</build_depend>
  <depend>rospy</build_depend>
  <depend>smach</build_depend>
  <depend>smach_msgs</build_depend>
  <depend>smach_ros</build_depend>
  <depend>std_msgs</build_depend>

  <export>
  </export>
</package>
