<?xml version="1.0"?>
<package format="2">
  <name>steve_auv</name>
  <version>0.0.0</version>
  <description>The steve_auv package</description>
  <maintainer email="ntrivelis@gmail.com">Nick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_msgs</depend>
  <depend>smach_ros</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
