<?xml version="1.0"?>
<package format="2">
  <name>steve_launch_structure</name>
  <version>0.1.0</version>
  <description>The steve_launch_structure package</description>
  <maintainer email="ntrivelis@gmail.com">Nick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
